tested:vscode:ipykernel:

--- a/cat_vs_dog.ipynb
+++ b/cat_vs_dog.ipynb
@@ -305,7 +305,7 @@
     "    pred = 'dog'\n",
     "else:\n",
     "    pred = 'cat'\n",
-    "print(\"Model predicts as: \",pred)"
+    "print(\"Model predicts as a: \",pred)"
    ]
   }
  ],
