--- a/Untrained_YOLOv8m_forAuto/static_images.ipynb
+++ b/Untrained_YOLOv8m_forAuto/static_images.ipynb
@@ -37,7 +37,7 @@
     }
    ],
    "source": [
-    "image_path = \"car-samples/twowheelers.jpeg\"\n",
+    "image_path = \"car-samples/high-mount.jpeg\"\n",
     "results = model.predict(image_path)"
    ]
   },
